<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_toast"
    android:padding="@dimen/dimen_ten"
    android:background="@android:color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_problem"
                android:id="@+id/text_message"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/standart_content_detail_text"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_ten"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_cancel"
                android:layout_alignParentLeft="true"
                android:text="@string/cancel"
                android:textSize="@dimen/standart_content_detail_text"
                android:textColor="@android:color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_refresh"
                android:layout_alignParentRight="true"
                android:text="@string/refresh"
                android:textSize="@dimen/standart_content_detail_text"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>